--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import "compass/css3";
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400|Raleway:300);
 
@@ -12,6 +11,19 @@ body{
   perspective: 0px;
   perspective-origin: 50% 50%;
 }
+
+footer{
+  color: white;
+  text-align: center;
+  
+}
+
+.color{
+  width: 50%;
+  height: 50%;
+  display: inline-block;
+}
+
 .infinity-stone{
   display: inline-block;
 	transition: all 0.85s cubic-bezier(0.175,0.885,0.320,1.275);
@@ -84,7 +96,7 @@ body{
   align-content: center;
   justify-content: center;
   display: grid;
-  column-gap: 150px;
+  column-gap: 170px;
   row-gap:10px ;
   grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr; 
   grid-template-areas: ". redA orangeA ."                        
@@ -126,7 +138,7 @@ body{
 .stone-green 
 .stone-face{
     background: green;
-    box-shadow: inset 0 0 50px 0px green,  0 0 100px 15px green;
+    box-shadow: inset 0 0 50px 0px green,  0 0 100px 20px green;
     animation-delay: 2s;
 }
 
@@ -139,19 +151,20 @@ body{
 .stone-purple
 .stone-face{ 
   background: purple;
-  box-shadow: inset 0 0 50px 0px purple,  0 0 100px 15px purple; 
+  box-shadow: inset 0 0 50px 0px purple,  0 0 100px 25px purple; 
   animation-delay: 1.5s;
 }
 
 
 .light{
-  box-shadow: inset 0 0 50px 0px white,  0 0 100px 15px white;
+  box-shadow: inset 0 0 50px 0px white,  0 0 100px 5px white;
+  /* box-shadow: 1px 3px 300px -1px rgba(250,250,250,1); */
 }
 
 .stone-yellow 
 .stone-face{
   background: yellow;
-  box-shadow: inset 0 0 50px 0px yellow,  0 0 100px 15px yellow;
+  box-shadow: inset 0 0 50px 0px yellow,  0 0 100px 8px yellow;
 }
 
 .stone-blue 
@@ -170,7 +183,6 @@ body{
 }
 
 .btn {
-  display: inline-block;
   padding: 8px 50px 6px;
   margin-bottom: 0;
   font-family: Arial, sans-serif;
